# splineFromMask

./: .gitignore  dataset_gen.py  install_torch.sh  main.py  models.py  pyproject.toml  unets.py  utils.py
src/edges_from_mask/: main.py  models.py
src/edges_from_mask/troch_cubic_spline/: test.py  test2.py
src/follow_mask_from_ends/: eval.py  main.py  main_new.py  models.py  train.py
src/key_point_from_mask/: main.py
src/path_from_mask_difussion/: main_new.py  models.py  train.py
src/splineFromMask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spline_dataset/: bspline_dataset.py  datasets.py  gen_dataset_spline.py
src/spline_from_mask/: bspline_image_label_gen.py  dataset_gen.py  datasets.py  gen_dataset_spline.py  main.py  unets.py  utils.py
