[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splineFromMask"              # your package name
version = "0.1.0"                         # start with 0.1.0 for initial dev
description = "Spline from Mask"  # short description of your package
readme = "README.md"                      # will be included on PyPI
license = { text = "MIT" }
authors = [
  { name = "Rotem", email = "you@example.com" }
]
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "opencv-python",
  "scipy",
  "matplotlib",
  "tqdm",
  "pyhocon"
]

[tool.setuptools.packages.find]
where = ["src"]                           # look for modules under src/
